--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head><script src="/medical-fraud/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=medical-fraud/livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>404 Page not found - 原告勝訴！　公益通報者に対する報復措置が認められました。不正診療請求、恣意的な医療、国民が収めた税金・社会保険料の無駄遣いは許さない📌</title>
@@ -10,8 +10,8 @@
 	
 	<meta property="og:title" content="404 Page not found">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="http://localhost:1313/medical-fraud/">
-	<meta property="og:url" content="http://localhost:1313/medical-fraud/404.html">
+	<meta property="og:image" content="https://minnanosaiban.github.io/medical-fraud/">
+	<meta property="og:url" content="https://minnanosaiban.github.io/medical-fraud/404.html">
 	<meta property="og:type" content="article">
 	<meta property="og:site_name" content="原告勝訴！　公益通報者に対する報復措置が認められました。不正診療請求、恣意的な医療、国民が収めた税金・社会保険料の無駄遣いは許さない📌">
 
@@ -19,7 +19,7 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="404 Page not found">
 	<meta name="twitter:description" content="">
-	<meta name="twitter:image" content="http://localhost:1313/medical-fraud/">
+	<meta name="twitter:image" content="https://minnanosaiban.github.io/medical-fraud/">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" href="/medical-fraud/css/custom.css">
 
 	<link rel="shortcut icon" href="/medical-fraud/favicon.ico">
+		
 		
 </head>
 <body class="body">
